--- a/index.html
+++ b/index.html
@@ -5,13 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Bootstrap v5.2 CDN -->
-    <!-- Custom Styles -->
+    <script src="https://kit.fontawesome.com/19556c5409.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="Css/Styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <!-- Boorstrap JS v5.2 CDN -->
+    <main>
+        <div class="row">
+            <div class="col-md-3 col-sm-12 offset-md-2">
+                <section>
+                    <h1>Profile Details</h1>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <img class="img-fluid rounded-circle" alt="Profile picture" src="https://images.pexels.com/photos/2709563/pexels-photo-2709563.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <p><span class="fw-bold">Name:</span> Isaac Mathews</p>
+                            <p><span class="fw-bold">Age:</span> 27</p>
+                            <p><span class="fw-bold">City/State:</span> Ca</p>
+                            <p>
+                                <span class="fw-bold">Status:</span>
+                                <span>
+                                    <i class="fa-solid fa-circle-user"></i>
+                                </span class="text-success">
+                                Online</p>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="colsm-12 bg-secondary text-white">
+                            <blockquote cite="" class="lead fst-italic text-center">"Progress has little to do with speed, but much to do with direction."</blockquote>
+                        </div>
+                    </div>
+                </section>    
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <section>
+                    <h1 class="text-center bg-secondary bg-opacity-75">About Me</h1>
+                    <p class="font-monospace text-center">Chief of Internal Security. Assistant Program Manager. Head of Code Infrastructor.</p>
+                    <h1 class="bg-secondary bg-opacity-75 text-center "> Personal Hobbies</h1>
+                    <p class="font-monospace">
+                        I love to spend my time at the local library, reading various amounts of different literautre. For the times that the library isn't open, I will browse the various texts provided by online vendors.
+                    </p>
+                    <p class="font-monospace">
+                        Excersice is also a must activity for me. After all a healthy body leads to a healthy mind. Not only for my line of work, but for my personal enjoyment of reading must I have a strong body to pursue what I love.
+                    </p>
+                </section>
+                <section>
+                    <h1 class="text-center bg-secondary bg-opacity-75">Favorite Dishes</h1>
+                    <div class="row">
+                        <div class="col">
+                            <ol class="list-unstyled list-inline">
+                                <li class="list-unstyled list-inline-item w-25">            
+                                    <img src="https://images.pexels.com/photos/4057701/pexels-photo-4057701.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail">    
+                                    <p>Spaghetti</p>    
+                                </li>
+                                <li class="list-unstyled list-inline-item w-25">            
+                                    <img src="https://images.pexels.com/photos/2180875/pexels-photo-2180875.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail">    
+                                    <p>Pizza</p>    
+                                </li>
+                                <li class="list-unstyled list-inline-item w-25">            
+                                    <img src="https://images.pexels.com/photos/1199957/pexels-photo-1199957.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail">    
+                                    <p>Cheeseburger</p>    
+                                </li>
+                            </ol>
+                        </div>
+                </section>
+                <section>
+                    <h1 class="bg-secondary bg-opacity-75 text-center">Isaac's Top Friends</h1>
+                    <div class="row">
+                        <div class="col">
+                            <ol class="list-unstyled list-inline">
+                                <li class="list-unstyled list-inline-item w-25">            
+                                    <img src="https://images.pexels.com/photos/32976/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail shadow-lg">    
+                                    <p><span><i class="fa-solid fa-star"></i></span>Augustus Sinclair</p>    
+                                </li>
+                                <li class="list-unstyled list-inline-item w-25">            
+                                    <img src="https://images.pexels.com/photos/50855/pexels-photo-50855.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail">    
+                                    <p><span><i class="fa-solid fa-star"></i></span>Michael Ramos</p>    
+                                </li>
+                                <li class="list-unstyled list-inline-item w-25">            
+                                    <img src="https://images.pexels.com/photos/1043471/pexels-photo-1043471.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="" class="img-fluid img-thumbnail border-warning">    
+                                    <p><span><i class="fa-solid fa-star"></i></span>Victor Kross</p>    
+                                </li>
+                            </ol>
+                        </div>
+                    </div>
+                    <p class="lead fst-italic">Isaac has <span>18</span> friends</p>
+                    <p>View Isaac's Friends: <a href=index.html>All</a> | <a href=index.html>Online</a> | <a href=index.html>New</a></p>
+                </section>
+            </div>
+        </div>
+    </main>
+    <!-- Bootstrap JS v5.2 CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
