--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                         <div class="col">
                             <ol class="list-unstyled list-inline">
                                 <li class="list-unstyled list-inline-item w-25">            
-                                    <img src="https://images.pexels.com/photos/32976/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail shadow-lg">    
+                                    <img src="https://images.pexels.com/photos/32976/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail border-warning">    
                                     <p><span><i class="fa-solid fa-star"></i></span>Augustus Sinclair</p>    
                                 </li>
                                 <li class="list-unstyled list-inline-item w-25">            
-                                    <img src="https://images.pexels.com/photos/50855/pexels-photo-50855.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail">    
+                                    <img src="https://images.pexels.com/photos/50855/pexels-photo-50855.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail  border-warning">    
                                     <p><span><i class="fa-solid fa-star"></i></span>Michael Ramos</p>    
                                 </li>
                                 <li class="list-unstyled list-inline-item w-25">            
