--- a/index.html
+++ b/index.html
@@ -51,6 +51,39 @@
                     </p>
                 </section>
                 <section>
+                    <h1 class="text-center bg-secondary bg-opacity-75">Favorite Books</h1>
+                    <table class="table table-dark table-striped-columns">
+                        <thead>
+                          <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Comedy</th>
+                            <th scope="col">Fiction</th>
+                            <th scope="col">Horror</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>The Postmortal</td>
+                            <td>It Ends with Us</td>
+                            <td>American Psycho</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>Good Omens</td>
+                            <td>Ender's Game</td>
+                            <td>The Throne of Bones</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td>Let's Pretend This Never Happened</td>
+                            <td>Dune</td>
+                            <td>Misery</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </section>
+                <section>
                     <h1 class="text-center bg-secondary bg-opacity-75">Favorite Dishes</h1>
                     <div class="row">
                         <div class="col">
@@ -80,7 +113,7 @@
                                     <p><span><i class="fa-solid fa-star"></i></span>Augustus Sinclair</p>    
                                 </li>
                                 <li class="list-unstyled list-inline-item w-25">            
-                                    <img src="https://images.pexels.com/photos/50855/pexels-photo-50855.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail  border-warning">    
+                                    <img src="https://images.pexels.com/photos/50855/pexels-photo-50855.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="img-fluid img-thumbnail border-warning">    
                                     <p><span><i class="fa-solid fa-star"></i></span>Michael Ramos</p>    
                                 </li>
                                 <li class="list-unstyled list-inline-item w-25">            
